--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 
     <artifactId>coffee-machine</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>storageModule</module>
+        <module>coffeeMachine</module>
+    </modules>
 
-    <parent>
-        <groupId>fr.imt.cours.IL-Maven-2023</groupId>
-        <artifactId>Main-pom</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <properties>
         <cucumber.version>7.8.1</cucumber.version>
@@ -50,7 +50,9 @@
                         <phase>test</phase>
                         <configuration>
                             <tasks>
+                                <!--suppress UnresolvedMavenProperty -->
                                 <delete dir="${env.HOME}/jacoco"/>
+                                <!--suppress UnresolvedMavenProperty -->
                                 <mkdir dir="${env.HOME}/jacoco"/>
                             </tasks>
                         </configuration>
@@ -150,7 +152,24 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.20.0</version>
+        </dependency>
     </dependencies>
+
 
 
 </project>
